--- a/buy-folder/buy.css
+++ b/buy-folder/buy.css
@@ -1,7 +1,3 @@
-.main-hide {
-    display: none;
-}
-
 .main {
     margin-top: 25px;
     display: flex;
@@ -31,7 +27,14 @@
     text-align: center;
     font-weight: bold;
     font-size: 16px;
+    /* position: relative; */
 }
+
+
+/* .search-icon {
+    position: absolute;
+    right: 0px;
+} */
 
 .filter-button {
     background: darkgoldenrod;
@@ -76,3 +79,271 @@
 
 
 /* filter code ends here.  */
+
+
+/* responsive code runs here  */
+
+@media(max-width:1451px) {
+    .main-bg {
+        height: 51vh;
+        width: 65%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-image: url('./images/buy.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-position: left top right 21px; */
+    }
+    .search-input {
+        width: 424px;
+        height: 56px;
+        border-radius: 13px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+        /* position: relative; */
+    }
+    .filter-button {
+        background: darkgoldenrod;
+        padding: 1em 2em;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 0.05em;
+        border: 0;
+        outline: 0;
+        text-align: left;
+        min-width: 130px;
+        display: inline-flex;
+        justify-content: space-between;
+        color: #f5f5f5;
+        cursor: pointer;
+        text-align: center;
+    }
+}
+
+@media(max-width:1010px) {
+    .main-bg {
+        height: 51vh;
+        width: 75%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-image: url('./images/buy.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-position: left top right 21px; */
+    }
+    .search-input {
+        width: 324px;
+        height: 56px;
+        border-radius: 13px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+        /* position: relative; */
+    }
+    .filter-button {
+        background: darkgoldenrod;
+        padding: 1em 2em;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 0.05em;
+        border: 0;
+        outline: 0;
+        text-align: left;
+        min-width: 110px;
+        display: inline-flex;
+        justify-content: space-between;
+        color: #f5f5f5;
+        cursor: pointer;
+        text-align: center;
+    }
+}
+
+@media(max-width:690px) {
+    .main-bg {
+        height: 51vh;
+        width: 85%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-image: url('./images/buy.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-position: left top right 21px; */
+    }
+    .search-input {
+        width: 284px;
+        height: 46px;
+        border-radius: 13px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+        /* position: relative; */
+    }
+    .filter-button {
+        background: darkgoldenrod;
+        padding: 1em 2em;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 0.05em;
+        border: 0;
+        outline: 0;
+        text-align: left;
+        min-width: 85px;
+        display: inline-flex;
+        justify-content: space-between;
+        color: #f5f5f5;
+        cursor: pointer;
+        text-align: center;
+    }
+}
+
+@media(max-width:560px) {
+    .main-bg {
+        height: 51vh;
+        width: 90%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-image: url('./images/buy.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-position: left top right 21px; */
+    }
+    .search-input {
+        width: 211px;
+        height: 46px;
+        border-radius: 13px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+        /* position: relative; */
+    }
+    .filter-button {
+        background: darkgoldenrod;
+        padding: 4px;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 0.05em;
+        border: 0;
+        outline: 0;
+        text-align: center;
+        min-width: 55px;
+        color: #f5f5f5;
+        cursor: pointer;
+    }
+}
+
+@media(max-width:420px) {
+    .main-bg {
+        height: 51vh;
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around background-image: url('./images/buy.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-position: left top right 21px; */
+    }
+    .search-input {
+        width: 195px;
+        height: 46px;
+        border-radius: 13px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+        /* position: relative; */
+    }
+    .filter-button {
+        background: darkgoldenrod;
+        padding: 4px;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 0.05em;
+        border: 0;
+        outline: 0;
+        text-align: center;
+        min-width: 45px;
+        color: #f5f5f5;
+        cursor: pointer;
+    }
+}
+
+@media(max-width:360px) {
+    .main-bg {
+        height: 51vh;
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around background-image: url('./images/buy.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-position: left top right 21px; */
+    }
+    .search-input {
+        width: 160px;
+        height: 46px;
+        border-radius: 13px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+        /* position: relative; */
+    }
+    .filter-button {
+        background: darkgoldenrod;
+        padding: 4px;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 0.05em;
+        border: 0;
+        outline: 0;
+        text-align: center;
+        min-width: 45px;
+        color: #f5f5f5;
+        cursor: pointer;
+    }
+}
+
+
+/* Responsive filter code runs here.  */
+
+@media(max-width:761px) {
+    .filter {
+        position: fixed;
+        width: 301px;
+        height: 601px;
+        padding: 10px;
+        border: 3px solid #147d43;
+        background-color: #d4fce6;
+        top: -50%;
+        left: 50%;
+        margin-top: -300.5px;
+        /* Negative half of height. */
+        margin-left: -150px;
+        /* Negative half of width. */
+        transition: all .5s ease;
+    }
+}
+
+@media(max-width:300px) {
+    .filter {
+        position: fixed;
+        width: 200px;
+        height: 501px;
+        padding: 10px;
+        border: 3px solid #147d43;
+        background-color: #d4fce6;
+        top: -50%;
+        left: 50%;
+        margin-top: -300.5px;
+        /* Negative half of height. */
+        margin-left: -100px;
+        /* Negative half of width. */
+        transition: all .5s ease;
+    }
+}
+
+
+/* Responsive filter code ends here.  */
